# DL-for-Enterprise-Project

./: .gitignore  README.md  requirement.txt  resmlp.ipynb  resnet50.ipynb  vit.ipynb
wildfire_clf/: Dockerfile  pyproject.toml  requirements.txt
wildfire_clf/app/: index.html  infer.py  model_utils.py  serve.py
wildfire_clf/k8s/: deployment.yaml  service.yaml
